Fixed marquee selection failing problem, second and third selections get shifted position.

--- a/client/manual_components/jquery-ui-smoothness/jquery-ui.css
+++ b/client/manual_components/jquery-ui-smoothness/jquery-ui.css
@@ -523,7 +523,7 @@ button.ui-button::-moz-focus-inner {
 	background-image: none;
 }
 .ui-resizable {
-	position: relative;
+	/*position: relative;*/
 }
 .ui-resizable-handle {
 	position: absolute;
